--- a/source/_posts/manual/2017-07-27-redis.md
+++ b/source/_posts/manual/2017-07-27-redis.md
@@ -141,69 +141,69 @@ redis> get foo
 
 #### Set
 
-| Command                                  | desc                                     | example | result |
-| ---------------------------------------- | ---------------------------------------- | ------- | ------ |
-| SADD key member [member ...]             | Add one or more members to a set         |         |        |
-| SCARD key                                | Get the number of members in a set       |         |        |
-| SDIFF key [key ...]                      | Subtract multiple sets                   |         |        |
-| SDIFFSTORE destination key [key ...]     | Subtract multiple sets and store the resulting set in a key |         |        |
-| SINTER key [key ...]                     | Intersect multiple sets                  |         |        |
-| SINTERSTORE destination key [key ...]    | Intersect multiple sets and store the resulting set in a key |         |        |
-| SISMEMBER key member                     | Determine if a given value is a member of a set |         |        |
-| SMEMBERS key                             | Get all the members in a set             |         |        |
-| SMOVE source destination member          | Move a member from one set to another    |         |        |
-| SPOP key [count]                         | Remove and return one or multiple random members from a set |         |        |
-| SRANDMEMBER key [count]                  | Get one or multiple random members from a set |         |        |
-| SREM key member [member ...]             | Remove one or more members from a set    |         |        |
-| SUNION key [key ...]                     | Add multiple sets                        |         |        |
-| SUNIONSTORE destination key [key ...]    | Add multiple sets and store the resulting set in a key |         |        |
-| SSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate Set elements       |         |        |
+| Command                                  | desc                                     | example                | result                             |
+| ---------------------------------------- | ---------------------------------------- | ---------------------- | ---------------------------------- |
+| SADD key member [member ...]             | Add one or more members to a set         | sadd s 1 2 3 4 5       | OK                                 |
+| SCARD key                                | Get the number of members in a set       | scard s                | 5                                  |
+| SMEMBERS key                             | Get all the members in a set             | smembers s             | "1" "2" "3" "4" "5"                |
+| SISMEMBER key member                     | Determine if a given value is a member of a set | sismember s 2          | 1                                  |
+| SRANDMEMBER key [count]                  | Get one or multiple random members from a set | srandmember s          | 4(随机)                              |
+| SPOP key [count]                         | Remove and return one or multiple random members from a set | spop s                 | 1[2 3 4 5]                         |
+| SREM key member [member ...]             | Remove one or more members from a set    | srem s 3               | 1[2 4 5]                           |
+| SDIFF key [key ...]                      | Subtract multiple sets                   | sadd b 2 4 7;sdiff s b | 5                                  |
+| SDIFFSTORE destination key [key ...]     | Subtract multiple sets and store the resulting set in a key | sdiffstore t s b       | 1(t=[5])                           |
+| SINTER key [key ...]                     | Intersect multiple sets                  | sinter s b             | 2 4                                |
+| SINTERSTORE destination key [key ...]    | Intersect multiple sets and store the resulting set in a key | sinter t s b           | 1(t=[2 4])                         |
+| SMOVE source destination member          | Move a member from one set to another    | smove s b 5            | 1(s=[2 4],b=[2 4 5 7])             |
+| SUNION key [key ...]                     | Add multiple sets                        | sunion s b             | 2 4 5 7                            |
+| SUNIONSTORE destination key [key ...]    | Add multiple sets and store the resulting set in a key | sunionstore t s b      | 1(t=[2 4 5 7])                     |
+| SSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate Set elements（当SCAN命令的游标参数被设置为 0 时， 服务器将开始一次新的迭代， 而当服务器向用户返回值为 0 的游标时， 表示迭代已结束。） | sscan s 0              | 迭代获取，每次10条，0为游标下标。用法类似mysql里的limit |
 
 #### ZSet
 
-| Command                                  | desc                                     | example | result |
-| ---------------------------------------- | ---------------------------------------- | ------- | ------ |
-| ZADD key \[NX\|XX]\[CH] \[INCR] score member \[score member ...] | Add one or more members to a sorted set, or update its score if it already exists |         |        |
-| ZCARD key                                | Get the number of members in a sorted set |         |        |
-| ZCOUNT key min max                       | Count the members in a sorted set with scores within the given values |         |        |
-| ZINCRBY key increment member             | Increment the score of a member in a sorted set |         |        |
-| ZINTERSTORE destination numkeys key \[key ...] \[WEIGHTS weight \[weight ...]] [AGGREGATE SUM\|MIN\|MAX] | Intersect multiple sorted sets and store the resulting sorted set in a new key |         |        |
-| ZLEXCOUNT key min max                    | Count the number of members in a sorted set between a given lexicographical range |         |        |
-| ZRANGE key start stop [WITHSCORES]       | Return a range of members in a sorted set, by index |         |        |
-| ZRANGEBYLEX key min max [LIMIT offset count] | Return a range of members in a sorted set, by lexicographical range |         |        |
-| ZREVRANGEBYLEX key max min [LIMIT offset count] | Return a range of members in a sorted set, by lexicographical range, ordered from higher to lower strings. |         |        |
-| ZRANGEBYSCORE key min max \[WITHSCORES] \[LIMIT offset count] | Return a range of members in a sorted set, by score |         |        |
-| ZRANK key member                         | Determine the index of a member in a sorted set |         |        |
-| ZREM key member [member ...]             | Remove one or more members from a sorted set |         |        |
-| ZREMRANGEBYLEX key min max               | Remove all members in a sorted set between the given lexicographical range |         |        |
-| ZREMRANGEBYRANK key start stop           | Remove all members in a sorted set within the given indexes |         |        |
-| ZREMRANGEBYSCORE key min max             | Remove all members in a sorted set within the given scores |         |        |
-| ZREVRANGE key start stop [WITHSCORES]    | Return a range of members in a sorted set, by index, with scores ordered from high to low |         |        |
-| ZREVRANGEBYSCORE key max min \[WITHSCORES] \[LIMIT offset count] | Return a range of members in a sorted set, by score, with scores ordered from high to low |         |        |
-| ZREVRANK key member                      | Determine the index of a member in a sorted set, with scores ordered from high to low |         |        |
-| ZSCORE key member                        | Get the score associated with the given member in a sorted set |         |        |
-| ZUNIONSTORE destination numkeys key \[key ...] \[WEIGHTS weight \[weight ...]] [AGGREGATE SUM\|MIN\|MAX] | Add multiple sorted sets and store the resulting sorted set in a new key |         |        |
-| ZSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate sorted sets elements and associated scores |         |        |
+| Command                                  | desc                                     | example                                  | result         |
+| ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | -------------- |
+| ZADD key \[NX\|XX]\[CH] \[INCR] score member \[score member ...] | Add one or more members to a sorted set, or update its score if it already exists | zadd zs 1 1 2 2 3 3                      | 3              |
+| ZCARD key                                | Get the number of members in a sorted set | zcard zs                                 | 3              |
+| ZCOUNT key min max                       | Count the members in a sorted set with scores within the given values | zcount zs 1 2                            | 2              |
+| ZINCRBY key increment member             | Increment the score of a member in a sorted set | zincrby zs 2 2                           | 4              |
+| ZSCORE key member                        | Get the score associated with the given member in a sorted set | zscore zs 2                              | 4              |
+| ZRANK key member                         | Determine the index of a member in a sorted set | zrank zs 2                               | 2              |
+| ZREVRANK key member                      | Determine the index of a member in a sorted set, with scores ordered from high to low | zrevrank zs 2                            | 0              |
+| ZREM key member [member ...]             | Remove one or more members from a sorted set | zrem zs 2                                | 1              |
+| ZINTERSTORE destination numkeys key \[key ...] \[WEIGHTS weight \[weight ...]] [AGGREGATE SUM\|MIN\|MAX] | Intersect multiple sorted sets and store the resulting sorted set in a new key | zadd zb 2 3;zinterstore out 2 zs zb      | [3 5]          |
+| ZLEXCOUNT key min max                    | Count the number of members in a sorted set between a given lexicographical range.成员名称前需要加 [ 符号作为开头, [ 符号与成员之间不能有空格 - 可以使用 - 和 + 表示得分最小值和最大值 | zlexcount zs [1 [3                       | 2              |
+| ZRANGE key start stop [WITHSCORES]       | Return a range of members in a sorted set, by index | zrange zs 0 2                            | [1 3]          |
+| ZREVRANGE key start stop [WITHSCORES]    | Return a range of members in a sorted set, by index, with scores ordered from high to low | zrevrange zs 0 1                         | [3 1]          |
+| ZRANGEBYLEX key min max [LIMIT offset count] | Return a range of members in a sorted set, by lexicographical range | zrangebylex zs [1 [3                     | [1 3]          |
+| ZREVRANGEBYLEX key max min [LIMIT offset count] | Return a range of members in a sorted set, by lexicographical range, ordered from higher to lower strings. | zrevrangebylex zs [3 [1                  | [3 1]          |
+| ZRANGEBYSCORE key min max \[WITHSCORES] \[LIMIT offset count] | Return a range of members in a sorted set, by score | zrangebyscore zs 1 3                     | [1 3]          |
+| ZREVRANGEBYSCORE key max min \[WITHSCORES] \[LIMIT offset count] | Return a range of members in a sorted set, by score, with scores ordered from high to low | zrevrangebyscore zs 1 3                  | [3 1]          |
+| ZREMRANGEBYLEX key min max               | Remove all members in a sorted set between the given lexicographical range | zremrangebylex zs[1 [2                   | 1              |
+| ZREMRANGEBYRANK key start stop           | Remove all members in a sorted set within the given indexes | zremrangebyrank zs 0 0                   | 1              |
+| ZREMRANGEBYSCORE key min max             | Remove all members in a sorted set within the given scores | zremrangebyscore zs 0 0                  | 0              |
+| ZUNIONSTORE destination numkeys key \[key ...] \[WEIGHTS weight \[weight ...]] [AGGREGATE SUM\|MIN\|MAX] | Add multiple sorted sets and store the resulting sorted set in a new key | zadd a 1 1 2 2;zadd b 2 2 3 3;zunionstore out 2 a b | [ 1 1 3 3 2 4] |
+| ZSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate sorted sets elements and associated scores | zscan out 0                              | [1 1 3 3 2 4]  |
 
 #### Hash
 
-| Command                                  | desc                                     | example | result |
-| ---------------------------------------- | ---------------------------------------- | ------- | ------ |
-| HDEL key field [field ...]               | Delete one or more hash fields           |         |        |
-| HEXISTS key field                        | Determine if a hash field exists         |         |        |
-| HGET key field                           | Get the value of a hash field            |         |        |
-| HGETALL key                              | Get all the fields and values in a hash  |         |        |
-| HINCRBY key field increment              | Increment the integer value of a hash field by the given number |         |        |
-| HINCRBYFLOAT key field increment         | Increment the float value of a hash field by the given amount |         |        |
-| HKEYS key                                | Get all the fields in a hash             |         |        |
-| HLEN key                                 | Get the number of fields in a hash       |         |        |
-| HMGET key field [field ...]              | Get the values of all the given hash fields |         |        |
-| HMSET key field value [field value ...]  | Set multiple hash fields to multiple values |         |        |
-| HSET key field value                     | Set the string value of a hash field     |         |        |
-| HSETNX key field value                   | Set the value of a hash field, only if the field does not exist |         |        |
-| HSTRLEN key field                        | Get the length of the value of a hash field |         |        |
-| HVALS key                                | Get all the values in a hash             |         |        |
-| HSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate hash fields and associated values |         |        |
+| Command                                  | desc                                     | example                 | result           |
+| ---------------------------------------- | ---------------------------------------- | ----------------------- | ---------------- |
+| HSET key field value                     | Set the string value of a hash field     | hset map k1 1           | 1                |
+| HMSET key field value [field value ...]  | Set multiple hash fields to multiple values | hmset map k2 2 k3 3     | OK               |
+| HSETNX key field value                   | Set the value of a hash field, only if the field does not exist | hsetnx map k3 3         | 0                |
+| HGET key field                           | Get the value of a hash field            | hget map k1             | 1                |
+| HMGET key field [field ...]              | Get the values of all the given hash fields | hmget map k1 k3         | [1 3]            |
+| HGETALL key                              | Get all the fields and values in a hash  | hgetall map             | [k1 1 k2 2 k3 3] |
+| HKEYS key                                | Get all the fields in a hash             | hkeys map               | [k1 k2 k3]       |
+| HVALS key                                | Get all the values in a hash             | hvals map               | [1 2 3]          |
+| HEXISTS key field                        | Determine if a hash field exists         | hexists map k2          | 1                |
+| HLEN key                                 | Get the number of fields in a hash       | hlen map                | 3                |
+| HSTRLEN key field                        | Get the length of the value of a hash field | hstrlen map k2          | 2                |
+| HDEL key field [field ...]               | Delete one or more hash fields           | hdel map k2             | 1                |
+| HINCRBY key field increment              | Increment the integer value of a hash field by the given number | hincrby map k3 1        | 4                |
+| HINCRBYFLOAT key field increment         | Increment the float value of a hash field by the given amount | hincrbyfloat map k3 0.5 | 4.5              |
+| HSCAN key cursor \[MATCH pattern] \[COUNT count] | Incrementally iterate hash fields and associated values | hscan map 0             | [k1 1 k3 4.5]    |
 
 ## Redis功能
 
