--- a/source/_posts/manual/2017-07-27-redis.md
+++ b/source/_posts/manual/2017-07-27-redis.md
@@ -21,6 +21,25 @@ published: false
 
 ## Redis的应用场景
 
+**常用使用途径**：
+
+- 缓存
+  - Cookie缓存
+  - 网页缓存
+  - 数据缓存
+- 分布式锁
+- 发布订阅
+- 计数器/全局ID
+
+**不常用使用途径**：
+
+- 记录日志
+- 数据库
+- 服务发现
+- 自动补全
+- 队列
+- 搜索
+
 ## Redis与其它同类产品的区别
 
 
@@ -208,9 +227,40 @@ redis> get foo
 ## Redis功能
 
 ### 发布订阅
+
+| Command                                  | desc                                     | example                                  | result       |
+| ---------------------------------------- | ---------------------------------------- | ---------------------------------------- | ------------ |
+| SUBSCRIBE channel \[channel ...]         | Listen for messages published to the given channels | subscribe ch                             |              |
+| PUBLISH channel message                  | Post a message to a channel              | publish ch 1                             |              |
+| UNSUBSCRIBE \[channel \[channel ...]]    | Stop listening for messages posted to the given channels | unsubscribe ch                           |              |
+| PSUBSCRIBE pattern \[pattern ...]        | Listen for messages published to channels matching the given patterns | psubscribe c?                            | 以c开头的channel |
+| PUNSUBSCRIBE \[pattern \[pattern ...]]   | Stop listening for messages posted to channels matching the given patterns | punsubscribe c?                          |              |
+| PUBSUB subcommand \[argument \[argument ...]] | Inspect the state of the Pub/Sub subsystem(查询发布订阅系统状态) | pubsub channels(列出当前活跃的channel)；pubsub numsub(返回订阅的客户端数量)；pubsub numpat(返回基于Pattern定于的客户端数量) |              |
+
 ### 持久化（快照，指令重演：优缺点对比）
+
+- 快照
+- 指令重演(append-only file)
+
 ### 数据安全-主备
 ### 分布式
 ### 事务
+
+| Command             | desc                                     | example | result |
+| ------------------- | ---------------------------------------- | ------- | ------ |
+| MULTI               | Mark the start of a transaction block(类似sql里的setAutoCommit(false)) |         |        |
+| EXEC                | Execute all commands issued after MULTI(类似sql里的commit) |         |        |
+| DISCARD             | Discard all commands issued after MULTI  |         |        |
+| WATCH key [key ...] | Watch the given keys to determine execution of the MULTI/EXEC block(提供CAS行为。被 WATCH 的键会被监视，并会发觉这些键是否被改动过了。 如果有至少一个被监视的键在 EXEC 执行之前被修改了， 那么整个事务都会被取消， EXEC 返回nil-reply来表示事务已经失败。) |         |        |
+| UNWATCH             | Forget about all watched keys            |         |        |
+
+Redis事务的目的是确保一系列的操作被一起执行。因为redis是单线程的！如果事务中的命令**入队失败**(不是执行失败！)，则放弃该事务！
+
+Redis不支持事务回滚：
+
+- Redis 命令只会因为错误的语法而失败（并且这些问题不能在入队时发现），或是命令用在了错误类型的键上面：这也就是说，从实用性的角度来说，失败的命令是由编程错误造成的，而这些错误应该在开发的过程中被发现，而不应该出现在生产环境中。
+- 因为不需要对回滚进行支持，所以 Redis 的内部可以保持简单且快速。
+
 ### 故障处理
+
 ### 性能
