--- a/source/_posts/manual/2017-07-31-geode.md
+++ b/source/_posts/manual/2017-07-31-geode.md
@@ -159,3 +159,7 @@ Geode pools memory, CPU, network resources, and optionally local disk across mul
    $ gfsh version --full
    ```
 
+
+## Geode的操作(基于gfsh)
+
+
