--- a/source/_posts/manual/2017-07-27-redis.md
+++ b/source/_posts/manual/2017-07-27-redis.md
@@ -247,10 +247,40 @@ redis> get foo
 | **PUNSUBSCRIBE** \[pattern \[pattern ...]] | Stop listening for messages posted to channels matching the given patterns | punsubscribe c?                          |              |
 | **PUBSUB** subcommand \[argument \[argument ...]] | Inspect the state of the Pub/Sub subsystem(查询发布订阅系统状态) | pubsub channels(列出当前活跃的channel)；pubsub numsub(返回订阅的客户端数量)；pubsub numpat(返回基于Pattern定于的客户端数量) |              |
 
-### 持久化（快照，指令重演：优缺点对比）
+### 持久化
 
-- 快照
-- 指令重演(append-only file)
+Redis提供了两种持久化方案RDB和AOF：
+
+- RDB是以一定的周期对数据做快照
+- AOF是将操作以指令的方式记录下来，后续可通过指令重演的方式进行数据恢复
+- 可以关闭持久化
+- AOF和RDB可同时使用，此时如果Redis重启，优先使用AOF来恢复数据
+
+两种持久化方案的优缺点：
+
+#### RDB的优点
+
+- RDB尤其适用于数据备份，容灾恢复
+- RDB在保存RDB文件时父进程唯一需要做的就是fork出一个子进程,接下来的工作全部由子进程来做，父进程不需要再做其他IO操作，所以RDB持久化方式可以最大化redis的性能.
+- 当数据量很大时，RDB恢复数据的速度优于AOF
+
+#### RDB的缺点：
+
+- RDB在redis非正常关闭的情况下，会丢失部分数据。比如：每5分钟备份一次，如果备份完后的三分钟后,redis非正常关闭了，那么这三分钟的数据就会丢失
+- RDB虽然通过子进程来进行备份，但是当数据量很大时可能会导致redis短时间的不响应，如果机器也不是很好，不响应时间可能会达到一秒钟！
+
+#### AOF的优点：
+
+- AOF后台发送指令，性能相对较好且基本不会丢失数据。每秒执行一次，最多只会丢失1秒的数据。
+- AOF是只追加文件，速度很快(顺序写磁盘不慢于随机写内存)。且如果文件出现问题，可以通过redis-check-aof工具来修复，尽可能的降低数据的丢失。
+- Redis 可以在 AOF 文件体积变得过大时，自动地在后台对 AOF 进行重写： 重写后的新 AOF 文件包含了恢复当前数据集所需的最小命令集合。 整个重写操作是绝对安全的，因为 Redis 在创建新 AOF 文件的过程中，会继续将命令追加到现有的 AOF 文件里面，即使重写过程中发生停机，现有的 AOF 文件也不会丢失。 而一旦新 AOF 文件创建完毕，Redis 就会从旧 AOF 文件切换到新 AOF 文件，并开始对新 AOF 文件进行追加操作。
+- AOF 文件有序地保存了对数据库执行的所有写入操作， 因此 AOF 文件的内容非常容易被人读懂， 对文件进行分析（parse）也很轻松。 导出（export） AOF 文件也非常简单： 举个例子， 如果你不小心执行了 FLUSHALL 命令， 但只要 AOF 文件未被重写， 那么只要停止服务器， 移除 AOF 文件末尾的 FLUSHALL 命令， 并重启 Redis ， 就可以将数据集恢复到 FLUSHALL 执行之前的状态。.
+
+#### AOF的缺点：
+
+- 相同数据量下AOF文件比RDB文件大
+- 根据所使用的 fsync 策略，AOF 的速度可能会慢于 RDB 。 在一般情况下， 每秒 fsync 的性能依然非常高， 而关闭 fsync 可以让 AOF 的速度和 RDB 一样快， 即使在高负荷之下也是如此。 不过在处理巨大的写入载入时，RDB 可以提供更有保证的最大延迟时间（latency）.
+- AOF可能有极少数的情况下有极少的指令无法重演。可能是AOF里的一个bug，这个bug在RDB里不存在。
 
 ### 数据安全-主备
 
@@ -295,7 +325,10 @@ config set masterauth <password>
 masterauth <password>
 ```
 
+### 高可用
+
 ### 分布式
+
 ### 事务
 
 | Command                 | desc                                     | example | result |
@@ -316,8 +349,4 @@ Redis不支持事务回滚：
 ### 故障处理
 
 ### 性能
-
-
-
-
 
