--- a/source/_posts/manual/2017-07-31-geode.md
+++ b/source/_posts/manual/2017-07-31-geode.md
@@ -13,16 +13,16 @@ published: false
 
 ## 什么是geode
 
-Apache Geode is a data management platform that provides real-time, consistent access to data-intensive applications throughout widely distributed cloud architectures.
+Geode是一个数据管理平台！支持分布式云架构下提供实时、一致的数据访问。
 
-Geode pools memory, CPU, network resources, and optionally local disk across multiple processes to manage application objects and behavior. It uses dynamic replication and data partitioning techniques to implement high availability, improved performance, scalability, and fault tolerance. In addition to being a distributed data container, Geode is an in-memory data management system that provides reliable asynchronous event notifications and guaranteed message delivery.
+Geode通过进程间共享内存，CPU,网络资源甚至本地磁盘的方式来管理应用对象和行为。使用动态复制和数据分区技术来实现高可用，高性能，伸缩性和容错。除了是一个分布式的数据容器，Geode还是一个支持可靠的异步通知和信息确定送达的内存数据管理系统
 
 ## geode能做什么
 
 ## geode相关概念
 
 - **Cache**:是Geode集群系统里对node的一个抽象描述。node可以以点对点模式或者客户端/服务端模式进行组合。
-- **Data Regions**:可以在Cache定义data regions。data regions类似关系数据库里的表。不过它是键值对格式的。
+- **Data Regions**:可以在Cache中定义data regions。data regions类似关系数据库里的表。不过它是键值对格式的。
 - **Replicated Region**:数据备份region
 - **Partitioned Region**:将数据分散到各个Cache上，实现分布式
 - **Locator**:提供服务发现与负载均衡。默认使用40404端口
