--- a/source/_posts/manual/2017-07-27-redis.md
+++ b/source/_posts/manual/2017-07-27-redis.md
@@ -21,13 +21,14 @@ published: false
 
 ## Redis相关概念
 
-- **Master/Slaver*:主备。用于数据备份安全，可组成Master/Slave链
+- **Master/Slaver**:主备。用于数据备份安全，可组成Master/Slave链
 - **复制**:当使用Master/Slave模式时，数据从Master到Slave的过程
-- **分片**:
-- **slot**:
-- **集群**:
-- **Sentinal**:
-- ​
+- **集群**:官方分布式解决方案
+  - **分片**：
+  - **slot**：
+- **Sentinal**:官方高可用方案
+  - **主观不可用**(SDOWN)：SDOWN是sentinel自己主观上检测到的关于master的状态
+  - **客观不可用**(ODOWN)：ODOWN需要一定数量的sentinel达成一致意见才能认为一个master客观上已经宕掉，各个sentinel之间通过命令`SENTINEL is_master_down_by_addr`来获得其它sentinel对master的检测结果
 
 ## Redis的应用场景
 
@@ -327,6 +328,32 @@ masterauth <password>
 
 ### 高可用
 
+Redis Sentinel是官方提供的高可用方案。提供如下功能：
+
+- **Monitoring**:Sentinel会持续的监控Master和Slave是否工作正常
+- **Notification**:如果Master或Slave出现了问题，那么Sentinel可以通过API通知系统管理员或者另外一个程序
+- **Automatic failover**:当Master不可用时，Sentinel会选择一个Slave作为新的Master，其它的Slave重新配置到这个新Master上，新Master的地址会被分配给使用Redis的应用
+- **Configuration provider**: 可以作为客户端服务发现：客户端连接Sentinel时，Sentinel会提供当前Master的地址，而如果Master挂了，Setinel会提供新Master的地址
+
+**需要注意的是**：Sentinel的部署也需要多点部署，否则会出现单点故障问题！
+
+#### 配置
+
+在sentinel.conf中配置
+
+```
+sentinel monitor mymaster 127.0.0.1 6379 2           //监听mymaster节点，当有2个Sentinel检测到此节点挂掉，则认定此节点已挂
+sentinel down-after-milliseconds mymaster 60000   //60秒无响应，认定挂了
+sentinel failover-timeout mymaster 180000             //容错超时时间为180秒
+sentinel parallel-syncs mymaster 1                          //最多可以有1个slave同时对新的master进行同步
+
+sentinel monitor resque 192.168.1.3 6380 4         //监听resque节点，当有4个Sentinel检测到此节点挂掉，则认定此节点已挂
+sentinel down-after-milliseconds resque 10000
+sentinel failover-timeout resque 180000
+```
+
+配置文件只需要配置master的信息，不用配置slave的信息，因为slave能够被自动检测到(master节点会有关于slave的消息)。需要注意的是，配置文件在sentinel运行期间是会被动态修改的，例如当发生主备切换时候，配置文件中的master会被修改为另外一个slave。这样，之后sentinel如果重启时，就可以根据这个配置来恢复其之前所监控的redis集群的状态。
+
 ### 分布式
 
 ### 事务
@@ -347,6 +374,8 @@ Redis不支持事务回滚：
 - 因为不需要对回滚进行支持，所以 Redis 的内部可以保持简单且快速。
 
 ### 故障处理
+
+参考高可用，RDB和AOF的优缺点进行总结
 
 ### 性能
 
