--- a/source/_posts/manual/2017-07-27-redis.md
+++ b/source/_posts/manual/2017-07-27-redis.md
@@ -259,7 +259,7 @@ Redis提供了两种持久化方案RDB和AOF：
 
 两种持久化方案的优缺点：
 
-#### RDB的优点
+#### RDB的优点：
 
 - RDB尤其适用于数据备份，容灾恢复
 - RDB在保存RDB文件时父进程唯一需要做的就是fork出一个子进程,接下来的工作全部由子进程来做，父进程不需要再做其他IO操作，所以RDB持久化方式可以最大化redis的性能.
