--- a/source/_posts/tech/work/2017-10-09-fedis-DC.md
+++ b/source/_posts/tech/work/2017-10-09-fedis-DC.md
@@ -19,6 +19,8 @@ typora-copy-images-to: ..\..\..\assets\tech\fedis-dc
 
 ![fedis](/assets/tech/fedis-dc/fedis.png)
 
+整体操作流程：Manager->Agent->Locator->Server
+
 
 # 管理功能
 
@@ -31,8 +33,6 @@ typora-copy-images-to: ..\..\..\assets\tech\fedis-dc
 distributed-system-id=1
 remote-locators=<remote-locator-addr1>[<port1>],<remote-locator-addr2>[<port2>]
 ```
-
-
 
 ## Sender
 
@@ -55,8 +55,8 @@ Manager-->User:显示操作结果(成功/失败)
 - parallel：同步(false)or异步(true)
 - remote-distributed-system-id：远程DC的id，表示这个Sender要发送到哪里
 - maximum-queue-memory：发送队列最大占用内存
-- enable-persistence：发送数据是否持久化
-- disk-store-name：持久化文件名称
+- enable-persistence：发送数据是否持久化(前端屏蔽，默认持久化，后端直接配置)
+- disk-store-name：持久化文件名称(前端屏蔽，默认为Sender的id)
 - dispatcher-threads：发送线程数(默认为5)
 - order-policy：排序方式,partition
 - manual-start：是否手动启动(true/false)
@@ -136,7 +136,7 @@ Manager-->User:显示操作结果(成功/失败)
 - end-port：监听结束端口
 - manual-start：是否手动启动(true/false)
 
-对应命令：
+对应命令(随机选择一个端口号进行监听，部署时开始端口和结束端口设置为相同端口)：
 
 ```
 create gateway-receiver --start-port=1530 --end-port=1551 --manual-start=false
@@ -167,7 +167,7 @@ stop gateway-receiver
 
 ## 配置冲突解决类
 
-冲突解决类手动配置：
+geode提供的冲突解决类方式如下：
 
 1. 编写一个实现了`GatewayConflictResolver`接口的类
 
@@ -198,18 +198,97 @@ stop gateway-receiver
 </cache>
 ```
 
+为方便动态处理冲突，处理方式如下：
+
+- fedis提供默认的冲突解决框架类，以及一个默认的冲突解决类！框架类与上面的配置相同。区别是onEvent方法，此方法中，根据不同的Region，选择对应的实际冲突解决类来处理冲突。默认冲突解决类实现自定义接口FedisConflict，该接口提供getName方法，以及conflict方法。
+- getName方法用于获取冲突类名称，与region对应。conflict方法为实际冲突解决逻辑！
+- 自定义冲突解决类基于ServiceLoader进行加载，框架类通过getName获取的值与Region匹配，如果匹配上，则使用此冲突解决类来处理冲突，否则由默认冲突解决类来进行处理！
+- 此方案可实现冲突解决类的动态加载，及动态选择！
+
 ## 跨DC IP映射
 
-通过代理机切换实现
+为保证DC间的通信，通过代理机确保连接！
+
+![fedis2](/assets/tech/fedis-dc/fedis2.png)
+
+DC间通信有两处，Locator之间的双向通信，Sender与Receiver之间的单向通信！
+
+连接保障方式如下（以DC1的Locator与DC2的Locator通信为例）：
+
+- DC1的Locator与ProxyA通信
+- ProxyA IP映射到DC2对应Locator端口
+- 如果ProxyA的IP映射不同，则切换其它IP映射通道
 
 # 统计监控功能
 
-- 跨dc复制队列监控
-- 读写延迟：发送数据后，至对应DC获取数据，计算从发送到获取到数据的时间差
-- 负载：通过UMC探点实现
-- CPU：通过UMC探点实现
-- 可用性：间隔性拉取数据
-- 数据统计
-  - 每个库/表有多少数据
+## 跨DC复制队列监控
 
+```sequence
+Manager->Agent: 定时发送获取队列数据命令
+Agent->Locator:发送构建的gfsh命令
+Locator->Server:获取队列状态
+Server-->Locator:
+Locator-->Agent:
+Agent-->Manager:显示结果
+```
 
+对应命令：
+
+```
+show subscription-queue-size
+```
+
+## 读写延迟
+
+发送数据后，至对应DC获取数据，计算从发送到获取到数据的时间差
+
+```sequence
+Manager->AgentA: set数据
+AgentA->LocatorA:发送构建的gfsh命令
+LocatorA->ServerA:存储数据
+ServerA-->LocatorA:
+LocatorA-->AgentA:
+AgentA-->Manager:
+Manager->AgentB: get数据(多次尝试直到获取到数据，或超时)
+AgentB->LocatorB:发送构建的gfsh命令
+LocatorB->ServerB:获取数据
+ServerB-->LocatorB:
+LocatorB-->AgentB:
+AgentB-->Manager:显示结果
+```
+
+## 负载
+
+通过UMC探点实现
+
+## CPU
+
+通过UMC探点实现
+
+## 可用性
+
+间隔性拉取数据
+
+```sequence
+Manager->Agent: get数据(分别到各个DC上获取)
+Agent->Locator:发送构建的gfsh命令
+Locator->Server:获取数据
+Server-->Locator:
+Locator-->Agent:
+Agent-->Manager:显示结果(正常/异常)
+```
+
+## 数据统计
+
+构建gfsh查询语句去查询每个表有多少数据
+
+```sequence
+User->Manager: count数据
+Manager->Agent:
+Agent->Locator:发送构建的gfsh命令
+Locator->Server:获取数据
+Server-->Locator:
+Locator-->Agent:
+Agent-->Manager:
+Manager-->User:显示结果
+```
