--- a/source/_posts/tech/work/2017-10-09-fedis-DC.md
+++ b/source/_posts/tech/work/2017-10-09-fedis-DC.md
@@ -34,6 +34,48 @@ distributed-system-id=1
 remote-locators=<remote-locator-addr1>[<port1>],<remote-locator-addr2>[<port2>]
 ```
 
+## Disk-Store
+
+### 创建
+
+```sequence
+User->Manager:界面填写创建Disk-Store信息
+Manager->Agent: 发送创建Disk-Store命令
+Agent->Locator:发送构建的gfsh命令
+Locator->Server:在Server创建Disk-Store
+Server-->Locator:
+Locator-->Agent:
+Agent-->Manager:
+Manager-->User:显示操作结果(成功/失败)
+```
+
+对应命令：
+
+```
+create disk-store --name=value --dir=value(,value)*
+```
+
+### 删除
+
+```sequence
+User->Manager:界面填写删除Disk-Store信息
+Manager->Agent: 发送删除Disk-Store命令
+Agent->Locator:发送删除的gfsh命令
+Locator->Server:在Server删除Disk-Store
+Server-->Locator:
+Locator-->Agent:
+Agent-->Manager:
+Manager-->User:显示操作结果(成功/失败)
+```
+
+对应命令：
+
+```
+destroy disk-store --name=value
+```
+
+
+
 ## Sender
 
 ### 创建
@@ -56,10 +98,11 @@ Manager-->User:显示操作结果(成功/失败)
 - remote-distributed-system-id：远程DC的id，表示这个Sender要发送到哪里
 - maximum-queue-memory：发送队列最大占用内存
 - enable-persistence：发送数据是否持久化(前端屏蔽，默认持久化，后端直接配置)
-- disk-store-name：持久化文件名称(前端屏蔽，默认为Sender的id)
+- disk-store-name：选择已有的disk-store
 - dispatcher-threads：发送线程数(默认为5)
 - order-policy：排序方式,partition
 - manual-start：是否手动启动(true/false)
+- member:Server name
 
 
 对应命令：
@@ -135,6 +178,7 @@ Manager-->User:显示操作结果(成功/失败)
 - start-port：监听开始端口
 - end-port：监听结束端口
 - manual-start：是否手动启动(true/false)
+- member:Server name
 
 对应命令(随机选择一个端口号进行监听，部署时开始端口和结束端口设置为相同端口)：
 
@@ -235,7 +279,7 @@ Agent-->Manager:显示结果
 对应命令：
 
 ```
-show subscription-queue-size
+describe disk-store --member=value --name=value
 ```
 
 ## 读写延迟
